Footer is correct on mobile

--- a/smartforests/scss/utils.scss
+++ b/smartforests/scss/utils.scss
@@ -91,6 +91,10 @@
   color: $black !important;
 }
 
+.border-black {
+  border-color: $black !important;
+}
+
 .max-content {
   width: max-content !important;
 }
